<?xml version="1.0"?>
<package format="2">
    <name>panda_openai</name>
    <version>0.0.0</version>
    <description>
        Panda_openai_ros is the meta package for all the Panda Openai ROS packages.
    </description>
    <maintainer email="rick.staa@outlook.com">Rick Staa</maintainer>
    <license>MIT</license>
    <url type="website">https://rickstaa.github.io/panda_openai_sim</url>
    <url type="repository">https://github.com/rickstaa/panda_openai_sim</url>
    <url type="bugtracker">https://github.com/rickstaa/panda_openai_sim/issues</url>
    <author email="rick.staa@outlook.com">Rick Staa</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>franka_description</exec_depend>
    <exec_depend>openai_ros</exec_depend>
    <exec_depend>panda_moveit_config</exec_depend>
    <exec_depend>panda_openai_sim</exec_depend>
    <exec_depend>panda_simulation</exec_depend>
    <exec_depend>theconstruct_msgs</exec_depend>

    <export>
        <metapackage />
    </export>
</package>